# HKCLR-Depalletizing-Demo

./: .gitignore  README.md
depalletizing_ws/: Dockerfile  a.txt  b.txt  f.txt  setup.bash
depalletizing_ws/src/aubo_description/: CMakeLists.txt  package.xml
depalletizing_ws/src/aubo_description/launch/: aubo.rviz  view_aubo.launch
depalletizing_ws/src/box_node/boxdemo/: README.md  (+8 more)
depalletizing_ws/src/boxdemo/: README.md  config.py  detect_interface.py  edge_detection.py  example_unstack.py  pcl2_img.py  pose.py  python_pcl.setup.py  requirements.txt  segment_3D.py  stack_detection.py  visualize.py
depalletizing_ws/src/libSmarteye/: CMakeLists.txt
depalletizing_ws/src/robot_arm_ikfast_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
depalletizing_ws/src/robot_controller/: CMakeLists.txt
depalletizing_ws/src/robot_controller/launch/: ArmController.launch  moveit_group.launch  moveit_group_aubo.launch  moveit_group_robot.launch
depalletizing_ws/src/robot_controller/scripts/: curi_ros_driver.py
depalletizing_ws/src/robot_controller/scripts/config/: cr2_ads_config.json  cr2_config.json  cr2_sim_config.json  cr2_sim_full_config.json  cr2_udp_config.json  default.json  ur5_config.json  write_cr2_json_config.py  write_json_config.py  write_motor_json_config.py  write_ur5_json_config.py
depalletizing_ws/src/robot_controller/src/: RobotDriver.cpp  RobotFakeDriver.cpp
depalletizing_ws/src/robot_description/: README.md
depalletizing_ws/src/robot_webots/: CMakeLists.txt  package.xml
depalletizing_ws/src/roport/: CMakeLists.txt  package.xml
(+79 files in other folders)
